<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/closeMenuButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_button_white" />

        <TextView
            android:id="@+id/phaseNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/choose_phase_num"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closeMenuButton" />

        <RadioGroup
            android:id="@+id/phaseNumberGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/phaseNumber"
            app:layout_constraintStart_toEndOf="@+id/phaseNumber"
            app:layout_constraintTop_toTopOf="@+id/phaseNumber">

            <RadioButton
                android:id="@+id/phaseNumberA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:buttonTint="@color/white"
                android:text="@string/phase_num_A"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/phaseNumberB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:buttonTint="@color/white"
                android:text="@string/phase_num_B"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/phaseNumberC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:buttonTint="@color/white"
                android:text="@string/phase_num_C"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/phaseLeftNumberGround"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:buttonTint="@color/white"
                android:text="@string/phase_num_ground_left"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/phaseRightNumberGround"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:buttonTint="@color/white"
                android:text="@string/phase_num_ground_right"
                android:textColor="@color/white" />
        </RadioGroup>

        <TextView
            android:id="@+id/phaseNumberDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="25dp"
            android:singleLine="false"
            android:text="@string/phase_num_description"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phaseNumberGroup"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:drawableStart="@drawable/prev"
            android:drawablePadding="10dp"
            android:text="@string/prev_step"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:drawableEnd="@drawable/next"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:drawablePadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>