<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.jizhenkeji.mainnetinspection.common.InspectionParameterConverter"/>
        <variable name="flightSpeedValue" type="androidx.databinding.ObservableFloat"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/closeMenuButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_button_white" />

        <TextView
            android:id="@+id/flightSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/choose_flight_speed"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closeMenuButton" />

        <SeekBar
            android:id="@+id/flightSpeedSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:max="3"
            android:progress="@={InspectionParameterConverter.speedFloatToProgressInt(flightSpeedValue)}"
            android:progressTint="@color/white"
            android:thumbTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/flightSpeed"
            app:layout_constraintEnd_toStartOf="@+id/flightSpeedNum"
            app:layout_constraintStart_toEndOf="@+id/flightSpeed"
            app:layout_constraintTop_toTopOf="@+id/flightSpeed" />

        <TextView
            android:id="@+id/flightSpeedNum"
            android:textColor="@color/white"
            android:textSize="@dimen/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text='@{String.valueOf(flightSpeedValue) + " m/s"}'
            app:layout_constraintBottom_toBottomOf="@+id/flightSpeed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/flightSpeed" />

        <TextView
            android:id="@+id/flightSpeedDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="25dp"
            android:singleLine="false"
            android:text="@string/flight_speed_description"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flightSpeedSeekBar"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:drawableStart="@drawable/prev"
            android:drawablePadding="10dp"
            android:text="@string/prev_step"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:drawableEnd="@drawable/next"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:drawablePadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>