<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.jizhenkeji.mainnetinspection.main.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

        <VideoView
            android:id="@+id/videoBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tagText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/body"
            android:textStyle="bold"
            android:text="@{viewModel.observableStateTag}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/aircraftPhoto"
            android:layout_width="368dp"
            android:layout_height="192dp"
            android:alpha="0.95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/aircraftShadow"
            android:layout_width="0dp"
            android:layout_height="192dp"
            android:layout_marginTop="96dp"
            android:rotationX="75"
            app:layout_constraintEnd_toEndOf="@+id/aircraftPhoto"
            app:layout_constraintStart_toStartOf="@+id/aircraftPhoto"
            app:layout_constraintTop_toTopOf="@+id/aircraftPhoto"
            app:srcCompat="@drawable/aircraft_shadow" />

        <Button
            android:id="@+id/startFlight"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/start_flight_button"
            android:drawableStart="@drawable/ic_flight"
            android:paddingStart="20dp"
            android:text="@string/start_flight"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="5dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="5dp"
            android:text="@string/help"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_help"
            app:layout_constraintBottom_toBottomOf="@+id/settings"
            app:layout_constraintEnd_toStartOf="@+id/settings"
            app:layout_constraintTop_toTopOf="@+id/settings"/>

        <TextView
            android:id="@+id/dataManage"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:drawableStart="@drawable/ic_data"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/data_manage"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/startFlight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/startFlight"/>

        <TextView
            android:id="@+id/recordMission"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:drawableStart="@drawable/ic_create"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/record_mission"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/dataManage"
            app:layout_constraintStart_toEndOf="@+id/dataManage"
            app:layout_constraintTop_toTopOf="@+id/dataManage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>